# omni-code

./: .editorconfig  .gitignore  ARCHITECTURE.md  Cargo.toml  deny.toml
.config/: nextest.toml
.github/workflows/: ci.yml
crates/omni-ai/: Cargo.toml
crates/omni-ai/src/: lib.rs  message.rs  provider.rs  stream.rs
crates/omni-ai/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/omni-cli/: Cargo.toml
crates/omni-cli/src/: main.rs
crates/omni-core/: Cargo.toml
crates/omni-core/src/: changeset.rs  doc_id.rs  history.rs  keymap.rs  lib.rs  line_ending.rs  selection.rs  text.rs  transaction.rs
crates/omni-event/: Cargo.toml
crates/omni-event/src/: action.rs  bus.rs  hook.rs  lib.rs
crates/omni-loader/: Cargo.toml
crates/omni-loader/src/: config.rs  font.rs  grammar.rs  keymap_loader.rs  lib.rs  paths.rs  recent_files.rs  theme.rs
crates/omni-lsp/: Cargo.toml
crates/omni-lsp/src/: client.rs  lib.rs  registry.rs  transport.rs
crates/omni-syntax/: Cargo.toml
crates/omni-syntax/queries/bash/: highlights.scm
crates/omni-syntax/queries/c/: highlights.scm
crates/omni-syntax/queries/cpp/: highlights.scm
crates/omni-syntax/queries/css/: highlights.scm
crates/omni-syntax/queries/go/: highlights.scm
crates/omni-syntax/queries/html/: highlights.scm
crates/omni-syntax/queries/javascript/: highlights.scm
crates/omni-syntax/queries/json/: highlights.scm
crates/omni-syntax/queries/markdown/: highlights.scm
crates/omni-syntax/queries/python/: highlights.scm
crates/omni-syntax/queries/rust/: highlights.scm
crates/omni-syntax/queries/toml/: highlights.scm
crates/omni-syntax/queries/tsx/: highlights.scm
crates/omni-syntax/queries/typescript/: highlights.scm
crates/omni-syntax/queries/yaml/: highlights.scm
crates/omni-syntax/src/: highlight.rs  highlighter.rs  language.rs  lib.rs  registry.rs  symbols.rs  tree.rs
crates/omni-term/: Cargo.toml
crates/omni-term/src/: bracket_match.rs  chord_state.rs  component.rs  compositor.rs  context.rs  cursor.rs  editing.rs  event_loop.rs  formatter.rs  lib.rs  navigation_history.rs  swap_file.rs  terminal.rs
crates/omni-term/src/widgets/: bottom_panel.rs  chat_panel.rs  command_palette.rs  confirm_dialog.rs  context_menu.rs  editor_pane.rs  editor_shell.rs  file_picker_modal.rs  file_tree.rs  folder_picker.rs  goto_line.rs  hit_map.rs  layout_state.rs  minimap.rs  mod.rs  mouse_state.rs  project_search.rs  search_bar.rs  sidebar.rs  startup_screen.rs  status_bar.rs  symbol_picker.rs  tab_bar.rs
crates/omni-vcs/: Cargo.toml
crates/omni-vcs/src/: diff.rs  lib.rs  repo.rs  status.rs
crates/omni-view/: Cargo.toml
crates/omni-view/src/: document.rs  document_store.rs  file_io.rs  lib.rs  view.rs  view_tree.rs
