[workspace]
members = [
    "crates/omni-core",
    "crates/omni-event",
    "crates/omni-syntax",
    "crates/omni-view",
    "crates/omni-lsp",
    "crates/omni-ai",
    "crates/omni-term",
    "crates/omni-vcs",
    "crates/omni-loader",
    "crates/omni-cli",
]
default-members = ["crates/omni-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/OmiCode/omni-code"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
# Internal crates
omni-core = { path = "crates/omni-core" }
omni-event = { path = "crates/omni-event" }
omni-syntax = { path = "crates/omni-syntax" }
omni-view = { path = "crates/omni-view" }
omni-lsp = { path = "crates/omni-lsp" }
omni-ai = { path = "crates/omni-ai" }
omni-term = { path = "crates/omni-term" }
omni-vcs = { path = "crates/omni-vcs" }
omni-loader = { path = "crates/omni-loader" }

# Text & data structures
ropey = "1.6"
smallvec = "1.13"
slotmap = "1.1"
bitflags = "2.10"

# Async runtime
tokio = { version = "1", default-features = false }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"

# Error handling
thiserror = "2"
color-eyre = "0.6"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# Terminal UI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Syntax
tree-sitter = "0.26"
once_cell = "1"
regex = "1"

# LSP
lsp-types = "0.97"

# AI
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
async-trait = "0.1"

# VCS
gix = { version = "0.70", default-features = false, features = ["basic", "status"] }

# Config
directories = "6"

# CLI
clap = { version = "4.5", features = ["derive"] }

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 2
