[package]
name = "omni-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Text primitives: rope, selection, transaction, undo history"

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
ropey.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
