[package]
name = "omni-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Configuration loading, grammar management, theme parsing"

[lints]
workspace = true

[dependencies]
omni-core.workspace = true
omni-event.workspace = true
omni-syntax.workspace = true
serde.workspace = true
toml.workspace = true
toml_edit.workspace = true
directories.workspace = true
thiserror.workspace = true
ratatui.workspace = true
tracing.workspace = true
reqwest.workspace = true
zip.workspace = true
tokio.workspace = true
