[package]
name = "omni-syntax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Syntax highlighting, tree-sitter integration, language configs"

[lints]
workspace = true

[dependencies]
omni-core.workspace = true
tree-sitter.workspace = true
serde.workspace = true
once_cell.workspace = true
regex.workspace = true
tracing.workspace = true
