[package]
name = "omni-term"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Terminal UI: ratatui components, event loop, compositor"

[lints]
workspace = true

[dependencies]
omni-core.workspace = true
omni-view.workspace = true
omni-event.workspace = true
omni-syntax.workspace = true
omni-loader.workspace = true
ignore.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio = { workspace = true, features = ["full"] }
color-eyre.workspace = true
futures-util.workspace = true
rat-event.workspace = true
ratatui-interact.workspace = true
tui-tree-widget.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
arboard.workspace = true
notify.workspace = true
omni-vcs.workspace = true

[dev-dependencies]
tempfile.workspace = true
